// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InfobarCustomerActions component should not render "merge" button because there is no customer to merge the selected customer with 1`] = `
<div
  className="float-right d-none d-md-block"
>
  <ConfirmButton
    className="mr-2"
    confirmationContent="Are you sure you want to set  as customer?"
    confirmationTitle="Change ticket customer"
    intent="secondary"
    onConfirm={[Function]}
    type="button"
  >
    Set as customer
  </ConfirmButton>
</div>
`;

exports[`InfobarCustomerActions component should not render "set as customer" button because the agent is not on a ticket 1`] = `
<div
  className="float-right d-none d-md-block"
>
  <ForwardRef
    intent="secondary"
    onClick={[Function]}
  >
    Merge
  </ForwardRef>
</div>
`;

exports[`InfobarCustomerActions component should not render "set as customer" nor "merge" buttons because the customers are the same 1`] = `
<div
  className="float-right d-none d-md-block"
/>
`;

exports[`InfobarCustomerActions component should render "set as customer" and "merge" button 1`] = `
<div
  className="float-right d-none d-md-block"
>
  <ConfirmButton
    className="mr-2"
    confirmationContent="Are you sure you want to set  as customer?"
    confirmationTitle="Change ticket customer"
    intent="secondary"
    onConfirm={[Function]}
    type="button"
  >
    Set as customer
  </ConfirmButton>
  <ForwardRef
    intent="secondary"
    onClick={[Function]}
  >
    Merge
  </ForwardRef>
</div>
`;
